cc: Fix VideoResourceUpdater color conversion

This was assuming that YUV to RGB conversion had been done if the output
format was YUV, which is the opposite of what should be happening.

Make the CHECK for extra YUV to RGB conversion happen always, by adding
a "can ignore for testing" flag for the pixel tests that violate this
assumption.

BUG=709099
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2799603006
Cr-Commit-Position: refs/heads/master@{#462742}

Former-commit-id: 8d25b83269837337206aede5522dea9a90daa093